package protectora.utilidades;
/**
 * Clase que contiene los colores del manto de los animales como constantes para utilidades
 * @author selene
 * @version 1.0
 */
public class ColorAnimal {
	public static int  MARRON_OSCURO, MARRON_CLARO, BLANCO, NEGRO, BICOLOR, TRICOLOR, NARANJA, AZUL;
	static {
		 MARRON_OSCURO=2;
		 MARRON_CLARO=3;
		 BLANCO=4;
		 NEGRO=5;
		 BICOLOR=6;
		 TRICOLOR=7;
		 NARANJA=8;
		 AZUL=9;
	}
}
