package protectora.utilidades;
/**
 * Clase que contiene los tipos de raza que puede ser un animal como constantes para utilidades
 * @author selene
 * @version 1.0
 */
public class Razas {
	public static int PERSA, ESFINGE, SIAMES, MAINE_COON, BENGALI, RAGDOLL, SIBERIANO, ANGORA, CORNISH_REX, COMUN_EUROPEO, ORIENTAL, EXOTICO, SOMALI, CURL_AMERICANO, AZUL_RUSO, ABISINIO, 
	CARTUJO, HIMALAYO, BOMBAY, BOSQUE_NORUEGA, CHIHUAHUA, POMERANIA, BICHON_MALTES, CANICHE, BULLDOG_FRANCES, YORKSHIRE, BEAGLE, BLOXER, JACK_RUSSELL, BORDER_COLLIE, BULL_TERRIER, CARLINO,
	MESTIZO, GALGO, HUSKY_SIBERIANO, SHIBA_INU, DALMATA, SHAR_PEI, LABRADOR, SAN_BERNARDO, ROTTWEILER, BOBTAIL, DOGO_ARGENTINO, GRAN_DANES;
	static {
		//razas gatos
		PERSA=19;
		ESFINGE=20;
		SIAMES=21;
		MAINE_COON=22;
		BENGALI=23;
		RAGDOLL=24;
		SIBERIANO=25;
		ANGORA=26;
		CORNISH_REX=27;
		COMUN_EUROPEO=28;
		ORIENTAL=29;
		EXOTICO=30;
		SOMALI=31;
		CURL_AMERICANO=32;
		AZUL_RUSO=33;
		ABISINIO=34;
		CARTUJO=35;
		HIMALAYO=36;
		BOMBAY=37;
		BOSQUE_NORUEGA=38;
		//razas perros
		CHIHUAHUA=39;
		POMERANIA=40;
		BICHON_MALTES=41;
		CANICHE=42;
		BULLDOG_FRANCES=43;
		YORKSHIRE=44;
		BEAGLE=45;
		BLOXER=46;
		JACK_RUSSELL=47;
		BORDER_COLLIE=48;
		BULL_TERRIER=49;
		CARLINO=50;
		MESTIZO=51;
		GALGO=52;
		HUSKY_SIBERIANO=53;
		SHIBA_INU=54;
		DALMATA=55;
		SHAR_PEI=56;
		LABRADOR=57;
		SAN_BERNARDO=58;
		ROTTWEILER=59;
		BOBTAIL=60;
		DOGO_ARGENTINO=61;
		GRAN_DANES=62;
		
	}
}
