package protectora.utilidades;
/**
 * Clase que contiene los tipos de sexo que pueden ser los animales como constantes para utilidades
 * @author selene
 * @version 1.0
 */
public class SexoAnimal {
	public static int MACHO, HEMBRA;
	static {
		MACHO=10;
		HEMBRA=11;
	}
}
