package protectora.utilidades;
/**
 * Clase que contiene los tipos de animales como constantes para utilidades
 * @author selene
 * @version 1.0
 */
public class TipoAnimal {
	public static int GATO, PERRO;
	static {
		GATO=0;
		PERRO=1;
	}
}
