package proyecto.compra;

public class Compra {

}
