package proyecto.donacion;

public class Donacion {

}
