package temaseis.genericos;

public class Cliente extends Persona{
    public Cliente(String nombre){
        super(nombre);
    }
}
